update price range filter values

--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -2040,13 +2040,13 @@ maximum 5 minutes after purchase!</string>
                                                                         <real key="value" value="10000"/>
                                                                     </userDefinedRuntimeAttribute>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="lowerVal">
-                                                                        <real key="value" value="100"/>
+                                                                        <real key="value" value="10"/>
                                                                     </userDefinedRuntimeAttribute>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="upperVal">
                                                                         <real key="value" value="10000"/>
                                                                     </userDefinedRuntimeAttribute>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="minDelta">
-                                                                        <real key="value" value="1000"/>
+                                                                        <real key="value" value="100"/>
                                                                     </userDefinedRuntimeAttribute>
                                                                 </userDefinedRuntimeAttributes>
                                                                 <connections>
@@ -3355,6 +3355,6 @@ maximum 5 minutes after purchase!</string>
         <image name="worldPins" width="17" height="17"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="7DU-41-qQy"/>
+        <segue reference="6eO-CG-Oxt"/>
     </inferredMetricsTieBreakers>
 </document>
