--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -2083,7 +2083,10 @@
                                         <rect key="frame" x="124" y="0.0" width="52" height="52"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ycm-44-xQ2">
-                                        <rect key="frame" x="52" y="74" width="196" height="40.666666666666657"/>
+                                        <rect key="frame" x="10" y="74" width="280" height="40.666666666666657"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="280" id="U0H-Vb-byf"/>
+                                        </constraints>
                                         <string key="text">Go to Marketplace
 and rent your first proxy.</string>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
