--- a/IPSX/Flows/Funds/Storyboard/Withdrawal.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Withdrawal.storyboard
@@ -618,7 +618,7 @@
                                 <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1650000066" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="urz-4I-Bm3" userLabel="Amount">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="urz-4I-Bm3" userLabel="Amount" customClass="RichTextFieldView" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="151" width="375" height="58"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TTg-g4-waT" userLabel="Separator">
@@ -657,28 +657,23 @@
                                     <constraint firstItem="CfC-Nx-kQs" firstAttribute="leading" secondItem="urz-4I-Bm3" secondAttribute="leading" id="die-Gn-f2W"/>
                                     <constraint firstAttribute="height" constant="58" id="wrO-vE-yeG"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="contentTextField" destination="pHb-QZ-Moa" id="1dn-cD-Efa"/>
+                                </connections>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Fo-Wc-MN0" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Fo-Wc-MN0" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="15" y="459" width="345" height="44"/>
-                                <color key="backgroundColor" red="0.1647058824" green="0.67450980390000004" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.63137254901960782" green="0.63137254901960782" blue="0.63137254901960782" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="JnD-iN-FJz"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="tintColor" red="0.16862745100000001" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Next Step">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <state key="disabled">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="activeColor">
-                                        <color key="value" red="0.1647058824" green="0.67450980390000004" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="nextStepAction:" destination="UB2-aw-HRU" eventType="touchUpInside" id="pBg-rB-ZoP"/>
                                 </connections>
@@ -711,6 +706,8 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="amountTextField" destination="pHb-QZ-Moa" id="fnd-L4-hvu"/>
+                        <outlet property="amountView" destination="urz-4I-Bm3" id="sh5-gR-pIl"/>
+                        <outlet property="nextButton" destination="7Fo-Wc-MN0" id="usa-mX-Bae"/>
                         <outlet property="separatorView" destination="gGD-Tb-1mJ" id="7t7-9N-VPc"/>
                         <outlet property="topBarView" destination="JjX-sl-nFo" id="u30-oT-lvI"/>
                         <outlet property="topConstraintOutlet" destination="YS5-z6-84J" id="YNT-yX-q1y"/>
