Copy pac link button enabled only for proxy status = active & refresh data while is in pending

--- a/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
@@ -694,6 +694,7 @@
                                             <constraint firstAttribute="trailing" secondItem="f1D-To-FOI" secondAttribute="trailing" constant="3" id="y1H-St-StO"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="copyPacButton" destination="EwL-D8-0AX" id="1g7-Ci-Xcd"/>
                                             <outlet property="countryLabel" destination="YKr-Rg-dNC" id="uAa-jH-RwJ"/>
                                             <outlet property="flagImageView" destination="tSB-1R-2mo" id="avp-Bs-YaI"/>
                                             <outlet property="httpImageView" destination="pUB-Ya-tWU" id="yHK-4n-kD4"/>
