--- a/IPSX/Flows/Funds/Storyboard/Funds.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Funds.storyboard
@@ -137,6 +137,9 @@
                                         <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="imR-ah-lfk" kind="presentation" identifier="WebViewSegueID" id="gsi-o6-HbM"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -187,6 +190,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yCM-79-bIi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2917.5999999999999" y="111.99400299850076"/>
+        </scene>
+        <!--SimpleWebView-->
+        <scene sceneID="Eyq-zX-NpU">
+            <objects>
+                <viewControllerPlaceholder storyboardName="SimpleWebView" id="imR-ah-lfk" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DFB-LV-OFz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3366" y="522"/>
         </scene>
         <!--Refund List Controller-->
         <scene sceneID="FTr-AU-sbU">
